Asset browser: dropping object on grid in orthogonal view misses the floor plane #93388

Closed
opened 2021-11-25 19:47:55 +01:00 by Daniel Salazar · 19 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-24 23:04, hash: 827c5b399e

Short description of error
Dropping an object on the grid should go the Z 0 but instead it goes under the floor plane if done in othogonal view

Exact steps for others to reproduce the error
Asset.blend
Drag & drop the Cube asset into the left screen
image.png
The cube will be dropped below the floor (check the right screen)
image.png

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-24 23:04, hash: `827c5b399e` **Short description of error** Dropping an object on the grid should go the Z 0 but instead it goes under the floor plane if done in othogonal view **Exact steps for others to reproduce the error** [Asset.blend](https://archive.blender.org/developer/F12179341/Asset.blend) Drag & drop the Cube asset into the left screen ![image.png](https://archive.blender.org/developer/F12179433/image.png) The cube will be dropped below the floor (check the right screen) ![image.png](https://archive.blender.org/developer/F12179502/image.png)
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#93488 was marked as duplicate of this issue

#93488 was marked as duplicate of this issue

#93637 was marked as duplicate of this issue

#93637 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Seems to only happen with the User Ortho view but not the primary Top or Bottom views for example. This may just have never worked as even 3.0.0 Beta, branch: master, commit date: 2021-10-30 14:44, hash: 945a99386b (my oldest build available) is also affected.

Seems to only happen with the User Ortho view but not the primary Top or Bottom views for example. This may just have never worked as even 3.0.0 Beta, branch: master, commit date: **2021-10-30** 14:44, hash: `945a99386b` (my oldest build available) is also affected.

Added subscriber: @rainbro

Added subscriber: @rainbro

Blender 3.0.0 f1cca30557
Dropped to floor - YES
Absolute Grid Snap - NO

2021-12-03 15-12-50.mp4

Blender 3.0.0 f1cca3055776 Dropped to floor - YES Absolute Grid Snap - NO [2021-12-03 15-12-50.mp4](https://archive.blender.org/developer/F12685993/2021-12-03_15-12-50.mp4)
Member

Added subscribers: @mano-wii, @JulianEisel

Added subscribers: @mano-wii, @JulianEisel
Member

EDIT: Sorry I just saw the video from @rainbro, this is a response to that. What's there has nothing to do with the report from what I can see.

Definitely not a bug since this is simply not supported, but would be good to support indeed. Much of the Add Object tool code is being reused here, but thinking about it, it could also follow snapping options (or maybe not, needs discussion).
@mano-wii would you be interested in looking into this?

EDIT: Sorry I just saw the video from @rainbro, this is a response to that. What's there has nothing to do with the report from what I can see. Definitely not a bug since this is simply not supported, but would be good to support indeed. Much of the *Add Object* tool code is being reused here, but thinking about it, it could also follow snapping options (or maybe not, needs discussion). @mano-wii would you be interested in looking into this?

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

My previous reply was in response to @rainbro, just noticed his comment is about something different as what's reported here.

I can confirm this issue. It's also something for @mano-wii if he has time for it.

My previous reply was in response to @rainbro, just noticed his comment is about something different as what's reported here. I can confirm this issue. It's also something for @mano-wii if he has time for it.

In #93388#1265696, @JulianEisel wrote:
EDIT: Sorry I just saw the video from @rainbro, this is a response to that. What's there has nothing to do with the report from what I can see.

Definitely not a bug since this is simply not supported, but would be good to support indeed. Much of the Add Object tool code is being reused here, but thinking about it, it could also follow snapping options (or maybe not, needs discussion).
@mano-wii would you be interested in looking into this?

The snap cursor follows the same settings for the Add Object tool. So if the "Snap To:" set there is the Default, the drag drop will also use the scene snap settings.
(Perhaps these settings could be moved elsewhere).

> In #93388#1265696, @JulianEisel wrote: > EDIT: Sorry I just saw the video from @rainbro, this is a response to that. What's there has nothing to do with the report from what I can see. > > Definitely not a bug since this is simply not supported, but would be good to support indeed. Much of the *Add Object* tool code is being reused here, but thinking about it, it could also follow snapping options (or maybe not, needs discussion). > @mano-wii would you be interested in looking into this? The snap cursor follows the same settings for the *Add Object* tool. So if the *"Snap To:"* set there is the `Default`, the drag drop will also use the scene snap settings. (Perhaps these settings could be moved elsewhere).

This issue was referenced by 256c1b82f6

This issue was referenced by 256c1b82f6e3e815ba4918f7c7bd91bcee11016a

This issue was referenced by 9a69c456bd

This issue was referenced by 9a69c456bd856e5ed634c37b657a55da39fa8130

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-12-06 03:41:17 +01:00

Added subscriber: @funksy

Added subscriber: @funksy
Sign in to join this conversation.
8 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#93388
No description provided.